--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "vercel-build": "prisma generate && next build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "5.19.1",
+    "@vercel/postgres": "^0.10.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18"
